<resources>
    <string name="app_name">Named Painting Gallery</string>
    <string name="change">화면전환 버튼입니다.</string>
    <string name="play_pause_button">재생버튼입니다.</string>
    <string name="like_button">좋아요 버튼입니다.</string>
    <string name="Artwork">작품을 눌렀습니다.</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="premium_icon">프리미엄 기능입니다.</string>
    <string name="default_web_client_id">928220830190-h13up8grfpih4g0rs6op3m6ckhmmsn43.apps.googleusercontent.com</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>